metadata/unpackaged/objects/QuoteOrder__c.object
<CustomObject>
    <fields>
        <fullName>Week__c</fullName>
        <description>&lt;Default Value Formula&gt;
&quot;-1&quot;

&lt;Input Translation Formula&gt;
@If(Week = &quot;&quot;; &quot;-1&quot;; Week)

&lt;Input Validation Formula&gt;
@If((@TextToNumber(Week) &lt; 0) | (@TextToNumber(Week) &gt; 53); @Failure(&quot;Week number should be between 0 and 53.&quot;); @Success)</description>
        <label>Week</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorDate__c</fullName>
        <description>&lt;Value Formula&gt;
@If(WorDate = &quot;&quot; &amp; WorYN = &quot;No&quot;; &quot;&quot;; WorYN_Old != WorYN; @Now; WorDate)</description>
        <label>WorDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WorYN_Old__c</fullName>
        <description>&lt;Value Formula&gt;
WorYN</description>
        <label>WorYN_Old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorYN__c</fullName>
        <description>&lt;Default Value Formula&gt;
&quot;No&quot;</description>
        <label>WorYN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkOrderWeek__c</fullName>
        <label>WorkOrderWeek</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>QuoteOrder</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuoteOrder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>